--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "safe-deposit-box",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://blagodus.github.io/safe-deposit-box",
   "dependencies": {
     "@csstools/normalize.css": "^11.0.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
